text jumping when hovered on sidebar fix

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     align-items: flex-end; /* Umístí obrázek na spodní okraj nadpisu */
     margin: 0 5%; /* Odsazení zleva a zprava stejné jako u nadpisu */
-    margin-top: 2px;
+    margin-top: 1px;
 }
 .image-container {
     position: relative; /* Nastavíme relativní pozici pro kontejner obrázku */
@@ -58,7 +58,7 @@ body {
     border-right: 6px solid #203966;
     border-top: 6px solid #203966;
     border-radius: 0 15px 15px 0;
-    margin-left: 12.5%; 
+    margin-left: 12.4%; 
     margin-bottom: -15px;
     background-color: #042331;
     transition: border-right 0.4s ease;
@@ -79,15 +79,6 @@ body {
     background: #042331;
     padding: 10px 0;
     border-right: 6px solid #203966;
-    transition: border-right 0.4s ease;
-}
-.sidebar:hover .menu-container {
-    border-right: 11px solid #203966;
-    border-bottom: 11px solid #203966;
-    transition: border-right 0.4s ease;
-} 
-.sidebar:hover{
-    border-right: 11px solid #203966;
     transition: border-right 0.4s ease;
 }
 .sidebar hr {
